Add resolve documentation
